2008-02-05  Sven Herzberg  <sven@imendio.com>

	Build the Maemo main menu with a GtkUIManager

	* src/ui/ui-main.c: (ui_main_new): added the required GtkActions into
	the actions group; added the proper UI to the GtkUIManager and get the
	popup menu from the ui manager

2008-02-05  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): dropped gtk_widget_show() for the
	main menu; gtk_menu_popup() will automatically show the widget

2008-02-05  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (game_new_cb), (game_join_cb), (game_pause_cb),
	(application_quit_cb), (ui_main_new): use extra callbacks for Maemo;
	these take GtkAction* and UiMain* arguments for the upcoming
	GtkUiManager based menubar

2008-02-05  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (new_1_player_game), (quit_program),
	(pause_game), (new_network_game): simplified some callbacks for
	upcoming changes

2008-02-05  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): added a GtkUIManager to make the
	menu-creation for Maemo a _lot_ easier

2008-02-06  Sven Herzberg  <sven@imendio.com>

	Use LINGUAS according to http://live.gnome.org/GnomeGoals/PoLinguas

	* configure.in,
	* po/LINGUAS: moved the language definition into a po/LINGUAS file

2008-02-05  Sven Herzberg  <sven@imendio.com>

	Finish development of the Maemo stuff wrt missing gnome-doc-utils.

	* Makefile.am: don't pass 'make dist' if gnome-doc-utils macros
	haven't been found
	* configure.in: support running autoconf and aclocal without installed
	gnome-doc-utils macros

2008-02-05  Sven Herzberg  <sven@imendio.com>

	Conditionalize gnome-doc-utils usage

	* Makefile.am: build help only if we have gnome-doc-utils
	* configure.in: also pass if there are no gnome-doc-utils (but then,
	don't build help)

2008-02-05  Sven Herzberg  <sven@imendio.com>

	* configure.in: use AC_HELP_STRING() for proper indentation and line
	breaks in the output of "./configure --help"
